# sei-chain

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_seid.sh  find_vaultscanner_v2.py  go.mod  go.mod.bak.20250809T032228.168938247Z  go.sum  go.sum.bak.20250809T032228.198402625Z  jest.config.js  package-lock.json  package.json  tsconfig.json  x402_claim.md
LumenCardKit_v2.0/: LICENSE  README.md  fund_lumen_wallet.sh  generate_qr_code.py  lumen_checkout.py  receipts.json  send_lumen_email.py  sunset_wallet.py  x402_auto_payout.py
backend/: indexer.js  package.json  relayer.js
claim_kin_agent_attribution/: __init__.py  github_helpers.py
claims/: __init__.py  vault_scanner_utils.py  vault_scanner_v2_deployment.json
components/: BalanceCard.tsx  RoyaltyDashboard.tsx  SoulSigilGallery.tsx  ZkSoulKeyMint.tsx  index.ts
contracts/: VaultScannerV2WithSig.sol  package-lock.json  package.json
contracts/kin-royalty-ledger/: Cargo.toml
contracts/kin-royalty-ledger/src/: error.rs  lib.rs  msg.rs  state.rs
docs/: cross-chain-vault-plan.md
evmrpc/: errors.go  simulate.go  tracers.go  utils.go  utils_test.go
examples/: build_claim_signature_payload.py  vault_scanner_v2.py
lib/: contracts.ts  web3.ts
nova/: Dockerfile  README.md  main.py  telegram.py  utils.py  validators.py
nova-dapp/: README.md  package.json
nova-portal/: package.json  tsconfig.json
pages/: index.tsx
resolver/: sigilIndex.ts  soulkeyResolver.ts  types.ts
scripts/: generateSoulSigilSVG.ts
sei-wasmd/: go.mod  go.sum
seibill/: README.md
test/: crossChainAccessTest.js
(+149 files in other folders)
