[package]
name = "kin-royalty-ledger"
version = "0.1.0"
edition = "2021"
description = "CosmWasm contract that tracks per-user royalties for Kin settlements"
authors = ["Keeper" ]
license = "Apache-2.0"
repository = "https://github.com/sei-chain/sei-chain"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.21"
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
hex = "0.4"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
cw-multi-test = "1.2.0"
