[package]
name = "kin-royalty-ledger"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { version = "1.3.1" }
cosmwasm-std = { version = "1.5.4", features = ["staking", "stargate"] }
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
schemars = "0.8.21"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror = "1.0"

[dev-dependencies]
cw-multi-test = "0.16.5"
